--- a/Linux系统/系统服务/智能分流.md
+++ b/Linux系统/系统服务/智能分流.md
@@ -34,6 +34,8 @@ cat delegated-apnic-latest | awk -F '|' '/CN/&&/ipv4/ {print $4 "/" 32-log($5)/l
 
 
 ```bash
+# 生产使用
+
 # 下载ip表
 wget -c http://ftp.apnic.net/stats/apnic/delegated-apnic-latest
 cat delegated-apnic-latest | awk -F '|' '/CN/&&/ipv4/ {print $4 "/" 32-log($5)/log(2)}' | cat > cn_rules.conf
@@ -63,6 +65,23 @@ iptables -t mangle -R PREROUTING 1 -m set ! --match-set china dst -j MARK --set-
 iptables -t mangle -R PREROUTING 1 -d 0.0.0.0/0 -j MARK --set-xmark 0x1/0xffffffff
 
 
+# 创建虚拟网桥
+ip link add device_name type bridge
+ip addr add ip/mask dev device_name
+ip link set device_name up
+
+# 删除网卡
+ip link del dev global_ip
+
+# vtysh配置
+router rip
+	network device_name
+	network ipaddr/mask
+	version 2
+	
+# IP转发
+iptables -t nat -A POSTROUTING -s 0.0.0.0/0 -m mark --mark 1  -j SNAT --to-source 1.2.3.4
+iptables -t nat -A POSTROUTING -s 0.0.0.0/0 -m mark --mark 1  -j SNAT --to-source 1.2.3.4
 ```
 
 
