--- a/工作笔记/常见问题.md
+++ b/工作笔记/常见问题.md
@@ -29,3 +29,45 @@
 	
 ```
 
+
+
+Ubuntu安装node.js 20 报错
+
+```bash
+# npm -v 
+node: /lib/x86_64-linux-gnu/libc.so.6: version `GLIBC_2.28' not found (required by node)
+
+
+
+
+
+
+```
+
+解决方法：
+
+
+
+查看系统支持的GLLIB版本号：
+
+```bash
+ldd --version
+
+# 或使用以下命令
+strings /lib/x86_64-linux-gnu/libc.so.6 | grep GLIBC_
+```
+
+
+
+安装GLIBC 2.28
+
+```bash
+sudo su -c 'echo "deb http://security.debian.org/debian-security buster/updates main" >> /etc/apt/sources.list' root
+
+sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 112695A0E562B32A 54404762BBB6E853
+
+sudo apt update
+
+sudo apt install libc6 libc6-dev -y
+```
+
